cabal-version:      3.0
name:               randstr-hs
version:            0.1.0.0
synopsis:           Generate random strings from regex-like patterns
description:        A Haskell reimplementation of the randstr Racket library.
                    Generates random strings matching regex-like pattern specifications
                    including character classes, quantifiers, groups, backreferences,
                    and Unicode properties.
license:            MIT
author:             randstr contributors
build-type:         Simple

library
  exposed-modules:
    RandStr
    RandStr.Types
    RandStr.Config
    RandStr.Utils
    RandStr.CharClasses
    RandStr.Tokenizer
    RandStr.Generator
  hs-source-dirs:   src
  default-language:  Haskell2010
  build-depends:
      base            >= 4.14 && < 5
    , containers      >= 0.6
    , array           >= 0.5
    , bytestring      >= 0.10
    , mtl             >= 2.2
  ghc-options:       -Wall -O2

executable randstr-hs
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language:  Haskell2010
  build-depends:
      base            >= 4.14 && < 5
    , randstr-hs
  ghc-options:       -Wall -O2
